<resources>
    <string name="app_name">DivineKiddy</string>
    <string name="discover">Discover</string>
    <string name="categories">Categories</string>
    <string name="moments">Moments</string>
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hey">Hey</string>
    <string name="orders">Orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile_details">Profile details</string>
    <string name="saved_address">Saved address</string>
    <string name="saved_cards">Saved cards</string>
    <string name="credits">Credits</string>
    <string name="my_kids">My kids</string>
    <string name="my_moments">My Moments</string>
    <string name="edit">EDIT</string>
    <string name="remove">REMOVE</string>
    <string name="add_a_new_address">ADD A NEW ADDRESS</string>
    <string name="move_to_cart">MOVE TO CART</string>
    <string name="change">Change</string>
    <string name="deliver_to">Deliver to:</string>
    <string name="proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="apply_promo_code">Apply promo code</string>
    <string name="price_summery">Price Summery</string>
    <string name="include_gst_and_all_government_taxes">include GST and all government taxes</string>
    <string name="total_item_price">Total item price</string>
    <string name="item_discount">Item discount</string>
    <string name="sheeping_fee">Shiping fee</string>
    <string name="boys_category">Boys Category</string>
    <string name="offers">Offers</string>
    <string name="see_all">SEE ALL</string>
    <string name="select_size_age_group">Select Size (Age Group)</string>
    <string name="size_chart">SIZE CHART</string>
    <string name="edit_pincode">EDIT PINCODE</string>
    <string name="get_it_in">Get it in</string>
    <string name="cash_on_delivery_available">Cash on delivery available</string>
    <string name="_15_days_return">15 days return</string>
    <string name="_15_days_exchange">15 days exchange</string>
    <string name="product_details">Product details</string>
    <string name="more_info">More info</string>
    <string name="more_white_sets">More White Sets</string>
    <string name="more_sets">More Sets</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="similar_sets">Similar Sets</string>
    <string name="ship_to">Ship to</string>
    <string name="order_summery">Order Summery</string>
    <string name="total_amount">Total Amount</string>
    <string name="payment">Payment</string>
    <string name="upi">UPI</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="credit_debit_card">CREDIT/DEBIT CARD</string>
    <string name="paytm">PAYTM</string>
    <string name="net_banking">NET BANKING</string>
    <string name="online">ONLINE PAYMENT</string>
    <string name="cash_on_delivery">CASH ON DELIVERY</string>
    <string name="emi">EMI</string>
    <string name="_100_safe_amp_secure_payment"><![CDATA[100% Safe & Secure Payment]]></string>
    <string name="all_done">All Done</string>
    <string name="your_order_has_been_confirmed">Your Order Has Been Confirmed</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="enter_a_promo_code">Enter a promo code</string>
    <string name="apply">APPLY</string>
    <string name="view_all_items_with_this_offer">View all items with this offer</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="select_items_to_cancel">Select items to cancel</string>
    <string name="why_are_you_cancelling_the_nitem_s">Why are you cancelling the \nitem(s)</string>
    <string name="select_a_reason">Select a reason</string>
    <string name="add_your_comments">Add your comments</string>
    <string name="cancel_item">CANCEL ITEM</string>
    <string name="cancel">Cancel Order</string>
    <string name="total">TOTAL</string>
    <string name="help">HELP</string>
    <string name="share">SHARE</string>
    <string name="rate">RATE</string>
    <string name="memories">Memories</string>
    <string name="hey_there">Hey there !</string>
    <string name="signin_or_join_to_do_a_lot_more_with_your_divine_kiddy_account">Sign in or join to do a lot more with your Divine Kiddy account</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="sign_in">SIGN IN</string>
    <string name="new_to_divinekiddy">New to Divinekiddy?</string>
    <string name="join_us"><u>Join us</u></string>
    <string name="legal">LEGAL</string>
    <string name="email">Email</string>
    <string name="send_otp">SEND OTP</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="otp_sent_msg">Otp has been sent to </string>
    <string name="use_mobile_number"><u>Use mobile number</u></string>
    <string name="mobile_number">Mobile Number</string>
    <string name="use_your_email_to_sign_in"><u>Use your Email to signin</u></string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email address</string>
    <string name="verify_your_number_to_create_your_account">Verify your number to create your account</string>
    <string name="have_an_account">Have an account?</string>
    <string name="buy_now">BUY NOW</string>
    <string name="add_address">Add Address</string>
    <string name="address">Address</string>
    <string name="landmark">Landmark</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="set_as_default_address">Set as default address</string>
    <string name="save_address">SAVE ADDRESS</string>
    <string name="just_few_step_to_go_and_yours_profile_s_complete">Just few step to go and yours profile\'s complete</string>
    <string name="verify_your_email_to_shop_nuninterupted">Verify your email to shop\nuninterrupted</string>
    <string name="name">Name</string>
    <string name="save">SAVE</string>
    <string name="enter_your_new_number_below_this_will_be_account_identity_from_now">Enter your new number below. This will be account identity, from now</string>
    <string name="enter_your_new_email_address_below_this_will_be_account_identity_from_now">Enter your new email address below. This will be account identity, from now</string>
    <string name="save_and_verify">SAVE AND VERIFY</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="otp_has_been_sent_to">OTP has been sent to</string>
    <string name="pincode">Pincode</string>
    <string name="done">DONE</string>
    <string name="choose_address">Choose Address</string>
    <string name="select_address">Select Address</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="item_was_cancelled_successfully">Item was cancelled successfully</string>


    <string-array name="Reasons">
        <item>Select a reason</item>
        <item>Damaged product</item>
        <item>Wrong item delivered</item>
    </string-array>
</resources>