<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignIn.JoinUsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        >

        <LinearLayout
            android:id="@+id/llBack"
            android:layout_width="match_parent"
            android:layout_height="35dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />

        </LinearLayout>

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llBack"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/full_name"
            android:padding="15dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etFullName"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:layout_marginEnd="12dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/email_address"
            android:padding="15dp" />

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:inputType="phone"
            android:maxLength="10"
            android:layout_marginEnd="12dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/mobile_number"
            android:padding="15dp" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etMobile"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="5dp"
            android:text="@string/verify_your_number_to_create_your_account"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvSendOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvInfo"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/send_otp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background"
            android:layout_below="@+id/tvSendOtp"
            android:layout_marginTop="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v1"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/have_an_account" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/sign_in"
                android:textColor="@color/dark_red"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>