<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignIn.SigninMobileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        >

        <LinearLayout
            android:id="@+id/llClose"
            android:layout_width="match_parent"
            android:layout_height="35dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_baseline_close_24" />

        </LinearLayout>

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llClose"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:inputType="phone"
            android:maxLength="10"
            android:layout_marginEnd="12dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/mobile_number"
            android:padding="15dp" />

        <TextView
            android:id="@+id/tvSendOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etMobile"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/send_otp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUseEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSendOtp"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/use_your_email_to_sign_in" />


        <View
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background"
            android:layout_below="@+id/tvUseEmail"
            android:layout_marginTop="12dp"/>

        <LinearLayout
            android:layout_below="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_to_divinekiddy"/>

            <TextView
                android:id="@+id/tvJoin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/join_us"
                android:gravity="end"
                android:textColor="@color/dark_red"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>