<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SavedAddress.AddressListFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24"/>

        <TextView
            android:id="@+id/tvSavedAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivBack"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/saved_address"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/llAddressList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_below="@+id/tvSavedAddress"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ashik"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Default"
                    android:background="@drawable/address_type_bg"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingTop="5dp"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/black4"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"/>

            </LinearLayout>
            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="+91 97323 38420"
                android:textSize="13sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nabadiganta,Mukundapur, Near Shib Mandir, Kolkata, West Bengal - 700 094"
                android:inputType="textMultiLine"
                android:textSize="13sp"
                android:layout_marginTop="5dp"
                tools:ignore="TextViewEdits" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:textSize="16sp"
                    android:textColor="@color/black4"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove"
                    android:layout_marginStart="30dp"
                    android:textSize="16sp"
                    android:textColor="@color/black4"
                    android:textStyle="bold"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black4"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/llAddAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llAddressList"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/add_address_btn_bg"
            android:gravity="center"
            android:letterSpacing=".03"
            android:padding="16dp"
            android:text="@string/add_a_new_address"
            android:textColor="@color/black4"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>