<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ProfileEdit.EmailChangeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rlMenu"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:elevation="1dp"
            android:background="@color/white">

            <LinearLayout
                android:id="@+id/llMenu"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="20dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:tint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/email_address"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rlMenu"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12sp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tvInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_new_email_address_below_this_will_be_account_identity_from_now"
                    android:textColor="@color/grey_font"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilName"
                    android:layout_below="@+id/tvInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/edit_text_background"
                    android:textColorHint="@color/black4"
                    app:endIconTint="@color/grey"
                    app:hintTextColor="@color/black4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/email_address"
                        tools:text="abirchanda009@gmail.com"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvSaveEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tilName"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/checkout_bg"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/save"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>